# CTU-FEE

./: .gitignore  README.md
ALG/: README.md
ALG/hw/base/: Makefile  prepare.sh  test.sh
ALG/hw/hw0 [Introduction]/: main.cpp
ALG/hw/hw1 [Asymptotic complexity]/: main.cpp
ALG/hw/hw2 [Recursion & Backtrack]/: main.cpp
ALG/hw/hw3 [Tree search]/: main.cpp
ALG/hw/hw4 [Graph search - BFS]/: main.cpp
ALG/hw/hw5 [BST realization]/: main.cpp
ALG/hw/hw6 [AVL realization]/: main.cpp
ALG/hw/hw7 [DP, Topological sort]/: main.cpp
ALG/hw/hw8 [DP]/: main.cpp  my_pub.in
ALG/zk/programming/: main.cpp
APO/: README.md
APO/hw/HW02/: Makefile  (+2 more)
DLE/: README.md
FUP/lab/: lab01.rkt  lab02.rkt  lab03.rkt  lab04.rkt  lab05.rkt  lab06_brainfuck.rkt
JAG/: README.md
JUL/: Project.toml  README.md
NUM/HW/: zviazyau_NUM108.mw  zviazyau_NUM231.mw  zviazyau_NUM302.mw  zviazyau_NUM417.mw  zviazyau_NUM512.mw
OPT/: README.md
OSY/: README.md
PDV/: README.md
PDV/lab/tutorial_01/: CMakeLists.txt  PDVCrypt.cpp  cpu_info.cpp  cpu_info.h  decrypt.cpp  false_sharing.cpp  hello.cpp  magic.cpp  matrix.cpp  memory.cpp  timing.h
PDV/lab/tutorial_08/: CMakeLists.txt
PDV/lab/tutorial_08/pdv_lib/: pdv_lib.hpp
PDV/lab/tutorial_08/src/: main.cpp  multiply.cpp  sparse_matrix.hpp
PJV/: README.md
PRP/: README.md
PSIA/HW/: Configuration.txt
RPH/: README.md
RPZ/: README.md
UROB/: README.md
ZUI/: README.md
ZUI/labs/: cheatsheet.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  lab8.ipynb  lab9.ipynb
_rozvrh_/: README.md
(+362 files in other folders)
